tests/bad/include_slice/bool.stderr
error[E0277]: the trait bound `bool: bytemuck::pod::Pod` is not satisfied
 --> tests/bad/include_slice/bool.rs:4:33
  |
4 | static BYTES_32_bool: &[bool] = include_data::include_slice!(bool, "../../test_data/binary_32");
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `bytemuck::pod::Pod` is not implemented for `bool`
  |
  = help: the following other types implement trait `bytemuck::pod::Pod`:
            ()
            ManuallyDrop<T>
            Option<T>
            PhantomData<T>
            PhantomPinned
            Wrapping<T>
            [T; N]
            __m128
          and $N others
note: required by a bound in `AlignedAs`
 --> src/lib.rs
  |
  | pub struct AlignedAs<T: bytemuck::Pod, B: Bytes + ?Sized> {
  |                         ^^^^^^^^^^^^^ required by this bound in `AlignedAs`
  = note: this error originates in the macro `include_data::include_slice` (in Nightly builds, run with -Z macro-backtrace for more info)
